--- a/layout.html
+++ b/layout.html
@@ -32,6 +32,9 @@
             <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going
                 back to
                 its founding by the Romans, who named it Londinium.</p>
+            <p>Resize the browser window to see the responsive effect (you will learn more about this in our next
+                chapter - HTML
+                Responsive.)</p>
         </article>
     </section>
     <footer>
